files/iptables
# Generated by iptables-save v1.4.7 on Tue Mar 12 02:44:03 2013
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:LOGACCEPT - [0:0]
:LOGDROP - [0:0]

# Assholes
-A INPUT -s 43.229.53.75 -j LOGDROP
# ssh
-A INPUT -p tcp -m state --state NEW,RELATED,ESTABLISHED -m tcp --dport 22 -j LOGACCEPT
-A INPUT -p tcp -m state --state NEW,RELATED,ESTABLISHED -m tcp --dport 2299 -j LOGACCEPT

# rpcbind
-A INPUT -p udp -m state --state NEW,RELATED,ESTABLISHED -m udp --dport 111 -j LOGACCEPT
-A INPUT -p tcp -m state --state NEW,RELATED,ESTABLISHED -m tcp --dport 111 -j LOGACCEPT
-A INPUT -p tcp -m state --state NEW,RELATED,ESTABLISHED -m tcp --dport 662 -j LOGACCEPT
-A INPUT -p udp -m state --state NEW,RELATED,ESTABLISHED -m udp --dport 662 -j LOGACCEPT

#dns
-A INPUT -p udp -m udp --dport 53 -j LOGACCEPT
-A INPUT -p tcp -m tcp --dport 53 -j LOGACCEPT

#samba
-A INPUT -p udp -m udp --dport 445 -j LOGACCEPT
-A INPUT -p tcp -m tcp --dport 445 -j LOGACCEPT
-A INPUT -p udp -m udp --dport 139 -j LOGACCEPT
-A INPUT -p tcp -m tcp --dport 139 -j LOGACCEPT

# avahi
-A INPUT -p udp -m udp --dport 5353 -j LOGACCEPT
-A INPUT -p tcp -m tcp --dport 5353 -j LOGACCEPT
-A INPUT -p udp -m udp --dport 5354 -j LOGACCEPT
-A INPUT -p tcp -m tcp --dport 5354 -j LOGACCEPT

# afp
-A INPUT -p tcp -m tcp --dport 548 -j LOGACCEPT
-A INPUT -p udp -m udp --dport 548 -j LOGACCEPT

# web services
-A INPUT -p tcp -m tcp --dport 80 -j LOGACCEPT
-A INPUT -p tcp -m tcp --dport 443 -j LOGACCEPT
-A INPUT -p tcp -m tcp --dport 8180 -j LOGACCEPT
-A INPUT -p tcp -m tcp --dport 8181 -j LOGACCEPT
-A INPUT -p tcp -m tcp --dport 8182 -j LOGACCEPT
-A INPUT -p tcp -m tcp --dport 8183 -j LOGACCEPT

# subsonic
-A INPUT -p tcp -m tcp --dport 9412 -j LOGACCEPT
-A INPUT -p tcp -m tcp --dport 4040 -j LOGACCEPT
-A INPUT -p tcp -m tcp --dport 57517 -j LOGACCEPT

# plex media server
-A INPUT -p tcp -m state --state NEW,RELATED,ESTABLISHED -m tcp --dport 32400 -j LOGACCEPT
-A INPUT -p udp -m state --state NEW,RELATED,ESTABLISHED -m udp --dport 32400 -j LOGACCEPT
-A INPUT -p udp -m state --state NEW,RELATED,ESTABLISHED -m udp --dport 32410 -j LOGACCEPT
-A INPUT -p udp -m state --state NEW,RELATED,ESTABLISHED -m udp --dport 32412 -j LOGACCEPT
-A INPUT -p udp -m state --state NEW,RELATED,ESTABLISHED -m udp --dport 32413 -j LOGACCEPT
-A INPUT -p udp -m state --state NEW,RELATED,ESTABLISHED -m udp --dport 32414 -j LOGACCEPT
-A INPUT -p udp -m state --state NEW,RELATED,ESTABLISHED -m udp --dport 35840 -j LOGACCEPT
-A INPUT -p udp -m udp --dport 39619 -j LOGACCEPT
-A INPUT -p udp -m state --state NEW,RELATED,ESTABLISHED -m udp --dport 46016 -j LOGACCEPT
-A INPUT -p udp -m state --state NEW,RELATED,ESTABLISHED -m udp --dport 46052 -j LOGACCEPT
-A INPUT -p tcp -m state --state NEW,RELATED,ESTABLISHED -m tcp --dport 47742 -j LOGACCEPT
-A INPUT -p udp -m state --state NEW,RELATED,ESTABLISHED -m udp --dport 47742 -j LOGACCEPT

# plex dnla server
-A INPUT -p udp -m state --state NEW,RELATED,ESTABLISHED -m udp --dport 1152 -j LOGACCEPT
-A INPUT -p tcp -m tcp --dport 15197 -j LOGACCEPT
-A INPUT -p udp -m state --state NEW,RELATED,ESTABLISHED -m udp --dport 1900 -j LOGACCEPT
-A INPUT -p tcp -m state --state NEW,RELATED,ESTABLISHED -m tcp --dport 32469 -j LOGACCEPT
-A INPUT -p udp -m state --state NEW,RELATED,ESTABLISHED -m udp --dport 32469 -j LOGACCEPT
-A INPUT -p udp -m state --state NEW,RELATED,ESTABLISHED -m udp --dport 40463 -j LOGACCEPT
-A INPUT -p udp -m state --state NEW,RELATED,ESTABLISHED -m udp --dport 12368 -j LOGACCEPT
-A INPUT -p udp -m state --state NEW,RELATED,ESTABLISHED -m udp --dport 42189 -j LOGACCEPT
-A INPUT -p tcp -m state --state NEW,RELATED,ESTABLISHED -m tcp --dport 61636 -j LOGACCEPT

#system
-A INPUT -p icmp -j LOGACCEPT
-A INPUT -i lo -j LOGACCEPT
-A INPUT -m state --state RELATED,ESTABLISHED -j LOGACCEPT
-A INPUT -j REJECT --reject-with icmp-host-prohibited
-A INPUT -j LOGDROP

# forward
-A FORWARD -j REJECT --reject-with icmp-host-prohibited

# output (allow all)
-A OUTPUT -j LOGACCEPT

# logging rules
-A LOGACCEPT -m limit --limit 2/min -j LOG --log-prefix "IPTables-Accept: "
-A LOGDROP -m limit --limit 10/min -j LOG --log-prefix "IPTables-Drop: "
-A LOGACCEPT -j ACCEPT
-A LOGDROP -j DROP

COMMIT
